Switched to new data structure for AST. David & Tyre