@@ -13,9 +13,11 @@ public class ASTFunctionGroup extends ASTParent
 {
 	public boolean operatorOverload = false;
 
-	public ASTFunctionGroup(ASTParent parent, String name)
+	public ASTFunctionGroup(ASTChildList.ListKey key, ASTParent parent, String name)
 	{
-		super(parent, name);
+		super(key, parent, name);
+
+		children.addLists(ASTChildList.ListKey.BODY);
 	}
 
 	public boolean isConstructor()
@@ -32,7 +34,7 @@ public class ASTFunctionGroup extends ASTParent
 	@Override
 	public SpiritType getExpressionType()
 	{
-		return childAsts.get(0).getExpressionType();
+		return children.getFirst().getExpressionType();
 	}
 
 	@Override
@@ -41,7 +43,7 @@ public class ASTFunctionGroup extends ASTParent
 		destination.println("FunctionGroup" + (operatorOverload ? " operator overload" : ""));
 		destination.println("{");
 		destination.indentation++;
-		for(ASTBase node : childAsts)
+		for(ASTBase node : children.getBody())
 		{
 			node.debugSelf(destination);
 			destination.println();
