@@ -2,6 +2,7 @@ package compiler.backends;
 
 import compiler.*;
 import compiler.ast.*;
+import compiler.ast.ASTChildList.ListKey;
 import compiler.lib.IndentPrinter;
 import compiler.lib.PathFind;
 
@@ -60,7 +61,7 @@ public class CompilerCPP extends LangCompiler
 				|| ast instanceof ASTLoop
 				|| ast instanceof ASTElse
 				|| ast instanceof  ASTInline
-				|| (ast instanceof ASTVariableDeclaration && ((ASTVariableDeclaration) ast).childAsts.get(0) instanceof ASTFunctionGroup);
+				|| (ast instanceof ASTVariableDeclaration && ((ASTVariableDeclaration) ast).children.getValue().get(0) instanceof ASTFunctionGroup);
 	}
 
 	private String getRawName(SpiritType targetType)
@@ -79,14 +80,10 @@ public class CompilerCPP extends LangCompiler
 
 		/// Compile members of the class. ///
 
-		for (ASTBase child : astClass.childAsts)
+		for (ASTBase child : astClass.children.getBody())
 		{
 			child.compileSelf(this);
-
-			if (child != astClass.lastChild())
-				cppOutput.println(isSemicolonless(child) ? ' ' : ';');
-			else
-				cppOutput.print(isSemicolonless(child) ? ' ' : ';');
+			cppOutput.print(isSemicolonless(child) ? ' ' : ';');
 		}
 
 		// If this is the main class. //
@@ -138,7 +135,7 @@ public class CompilerCPP extends LangCompiler
 		hppOutput.println("public:");
 		hppOutput.indentation++;
 
-		for (ASTBase child : astClass.childAsts)
+		for (ASTBase child : astClass.children.getAll())
 		{
 			if (child instanceof ASTVariableDeclaration)
 			{
@@ -173,7 +170,7 @@ public class CompilerCPP extends LangCompiler
 		cppOutput.println(")");
 		cppOutput.println("{");
 		cppOutput.indentation++;
-		for (ASTBase child : astIf.childAsts)
+		for (ASTBase child : astIf.children.getBody())
 		{
 			child.compileSelf(this);
 			cppOutput.println(isSemicolonless(child) ? ' ' : ';');
@@ -187,7 +184,7 @@ public class CompilerCPP extends LangCompiler
 			cppOutput.println("else");
 			cppOutput.println("{");
 			cppOutput.indentation++;
-			for (ASTBase child : astIf.elseStatement.childAsts)
+			for (ASTBase child : astIf.elseStatement.children.getBody())
 			{
 				child.compileSelf(this);
 				cppOutput.println(isSemicolonless(child) ? ' ' : ';');
@@ -217,16 +214,10 @@ public class CompilerCPP extends LangCompiler
 		cppOutput.println(")");
 		cppOutput.println("{");
 		cppOutput.indentation++;
-		for (ASTBase child : astLoop.childAsts)
+		for (ASTBase child : astLoop.children.getBody())
 		{
-			if (child != astLoop.preparationalStatement
-					&& child != astLoop.initialStatement
-					&& child != astLoop.conditionalStatement
-					&& child != astLoop.iterationalStatement)
-			{
-				child.compileSelf(this);
-				cppOutput.println(isSemicolonless(child) ? ' ' : ';');
-			}
+			child.compileSelf(this);
+			cppOutput.println(isSemicolonless(child) ? ' ' : ';');
 		}
 		cppOutput.indentation--;
 		cppOutput.println("}");
@@ -252,16 +243,12 @@ public class CompilerCPP extends LangCompiler
 
 		cppOutput.print("(");
 
-		for (ASTBase child : astFunctionCall.childAsts)
+		for (ASTBase child : astFunctionCall.children.getArgs())
 		{
-			if (astFunctionCall.compileChild(child))
-			{
-				child.compileSelf(this);
-				if (child != astFunctionCall.lastChild())
-					cppOutput.print(", ");
-			}
+			child.compileSelf(this);
+			if (child != astFunctionCall.children.getLast(ASTChildList.ListKey.ARGS))
+				cppOutput.print(", ");
 		}
-
 
 		cppOutput.print(")");
 	}
@@ -269,10 +256,10 @@ public class CompilerCPP extends LangCompiler
 	@Override
 	public void compileFunctionGroup(ASTFunctionGroup astFunctionGroup)
 	{
-		for (ASTBase node : astFunctionGroup.childAsts)
+		for (ASTBase node : astFunctionGroup.children.getBody())
 		{
 			node.compileSelf(this);
-			if (node != astFunctionGroup.lastChild())
+			if (node != astFunctionGroup.children.getBody())
 			{
 				currentOutput.println();
 			}
@@ -390,8 +377,9 @@ public class CompilerCPP extends LangCompiler
 
 		// The arguments. //
 		declaration.append("(");
-		for (ASTVariableDeclaration child : astFunctionDeclaration.args)
+		for (ASTBase baseChild : astFunctionDeclaration.children.getArgs())
 		{
+			ASTVariableDeclaration child = (ASTVariableDeclaration)baseChild;
 			declaration.append(child.getExpressionType().getTypeName());
 			declaration.append(' ');
 			declaration.append(child.getName());
@@ -421,12 +409,10 @@ public class CompilerCPP extends LangCompiler
 		{
 			// Otherwise, continue...
 
-			ASTFunctionCall listInitSuperConstructorCall = null;
-
 			// A special case for constructors... //
-			if (group.isConstructor() && astFunctionDeclaration.childAsts.size() > 0)
+			if (group.isConstructor() && astFunctionDeclaration.children.getBody().size() > 0)
 			{
-				listInitSuperConstructorCall = (ASTFunctionCall) astFunctionDeclaration.childAsts.get(0);
+				ASTFunctionCall listInitSuperConstructorCall = (ASTFunctionCall) astFunctionDeclaration.children.getFirst();
 
 				// Check if listInitSuperCall is actually valid... //
 				if (listInitSuperConstructorCall.getDeclarationPath() instanceof ASTMemberAccess
@@ -436,12 +422,12 @@ public class CompilerCPP extends LangCompiler
 					currentOutput.print(getRawName(astFunctionDeclaration.getContainingClass().extendsClassAST));
 					currentOutput.print("(");
 
-					for (ASTBase child : listInitSuperConstructorCall.childAsts)
+					for (ASTBase child : listInitSuperConstructorCall.children.getArgs())
 					{
 						if (listInitSuperConstructorCall.compileChild(child))
 						{
 							child.compileSelf(this);
-							if (child != listInitSuperConstructorCall.lastChild())
+							if (child != listInitSuperConstructorCall.children.getLast(ListKey.ARGS))
 								currentOutput.print(", ");
 						}
 					}
@@ -455,13 +441,10 @@ public class CompilerCPP extends LangCompiler
 
 			currentOutput.println("{");
 			currentOutput.indentation++;
-			for (ASTBase child : astFunctionDeclaration.childAsts)
+			for (ASTBase child : astFunctionDeclaration.children.getBody())
 			{
-				if (child != listInitSuperConstructorCall && astFunctionDeclaration.compileChild(child))
-				{
-					child.compileSelf(this);
-					currentOutput.println(isSemicolonless(child) ? ' ' : ';');
-				}
+				child.compileSelf(this);
+				currentOutput.println(isSemicolonless(child) ? ' ' : ';');
 			}
 			currentOutput.indentation--;
 			currentOutput.println("}");
@@ -484,7 +467,7 @@ public class CompilerCPP extends LangCompiler
 	public void compileReturnExpression(ASTReturnExpression astReturnExpression)
 	{
 		currentOutput.print("return ");
-		astReturnExpression.childAsts.get(0).compileSelf(this);
+		astReturnExpression.children.getValue().get(0).compileSelf(this);
 	}
 
 	@Override
